# openfab

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  LICENSE  OpenFab_MVP_Design_and_PRD.md  README.md  init.sh
.github/workflows/: ci.yml  pages.yml
bridge/: README.md  openfab-agentchat-bridge.mjs  openfab-agentchat-bridge.test.mjs  start-phase1.sh
demo/: forge_agnostic_demo.sh  run_agentspec_demo.sh  run_demo.sh  run_selfhost_demo.sh  run_web_demo.sh
docs/: ACCEPTANCE-CHECKLIST.md  DEMO-e2e.md  DEMO.md  DEPLOYMENT-AI-RUNBOOK.md  DEPLOYMENT.md  DESIGN-matrix-agent-execution-layer.md  E2E-TESTPLAN.md  ENTERPRISE_QUICKSTART.md  HANDOFF.md  KICKOFF_PROMPT.md  MULTI_BASE_COMPARISON.md  OpenFab_MVP_Design_and_PRD.md  OpenFab_Overview.md  PHASE1-SOFTWARE-FACTORY-PLAN.md  PHASE2-CHECKLIST.md  ROADMAP-enterprise-software-factory.md  ROADMAP-phase2.md  ROADMAP-verification-thickness.md  ROADMAP.md  RUNBOOK.md  SELF_HOSTING.md  TODO.md  VALUE_PROPOSITION.md  VALUE_PROPS.md  WEB.md  agent-chat-patch.md  generation-predicate-v0.1.md  robrix2-agentchat-integration.md
docs/acceptance/: 2026-07-12-fsf-0-acceptance-record.md
docs/adr/: 0001-mvp-architecture-decisions.md  0002-web-ui-and-base-forge-matrix.md  0003-agentd-execution-and-openfab-certification-boundary.md  0003-self-hosting-control-data-plane-isolation.md  (+1 more)
forges/: .gitignore  README.md  docker-compose.yml
integrations/: launch-cloud-demo.sh  start-agentchat-orchestrate.sh
policy/: trust.json  trust.rego
schemas/: openfab-generation.predicate.json  spec.schema.json
specs/: demo-temp-converter.spec.yaml  openfab-selfdev.spec.yaml  openfab-v0.1.spec.yaml
src/: cli.rs  lib.rs  main.rs  ops.rs  runstate.rs  server.rs  spec_cycle.rs
tests/: agent_spec_authoring_smoke.rs
web/: app.js  console.html  fabcrypto.js  fabengine.js  forgepush.js  index.html  openfab-agent.md  ops_browser.js  style.css
(+57 files in other folders)
